--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "@tanstack/react-query": "^5.71.10",
     "@tanstack/react-query-devtools": "^5.71.10",
     "axios": "^1.8.4",
+    "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.5.0"
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.55.0",
+    "react-router": "^7.5.0",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
